[package]
name = "sshproxygen"
version = "0.1.0"
edition = "2021"
authors = ["Rotko Networks <hq@rotko.net>"]
description = "SSH proxy user management tool"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nix = { version = "0.29", features = ["user"] }
users = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
std = { version = "1.0.1", package = "rustc-std-workspace-std" }

[profile.release]
strip = true  # Strip symbols from the binary
opt-level = 3 # Maximum optimizations
lto = true    # Enable link-time optimization
